--- a/cgm-addons/cgm_purchase/i18n/fr.po
+++ b/cgm-addons/cgm_purchase/i18n/fr.po
@@ -21,9 +21,43 @@ msgid "<span class=\"o_form_label\">Need State</span>"
 msgstr "<span class=\"o_form_label\">État de besoin</span>"
 
 #. module: cgm_purchase
+#: model:ir.model.fields,field_description:cgm_purchase.field_purchase_order_line__qty_available
+msgid "Available quantity"
+msgstr "Quantité disponible"
+
+#. module: cgm_purchase
+#: model:ir.model.fields,help:cgm_purchase.field_purchase_order_line__qty_available
+msgid ""
+"Current quantity of products.\n"
+"In a context with a single Stock Location, this includes goods stored at this Location, or any of its children.\n"
+"In a context with a single Warehouse, this includes goods stored in the Stock Location of this Warehouse, or any of its children.\n"
+"stored in the Stock Location of the Warehouse of this Shop, or any of its children.\n"
+"Otherwise, this includes goods stored in any Stock Location with 'internal' type."
+msgstr ""
+
+#. module: cgm_purchase
 #: model:ir.model.fields,field_description:cgm_purchase.field_purchase_order__device_ids
 msgid "Devices"
 msgstr "Devices"
+
+#. module: cgm_purchase
+#: model:ir.model.fields,field_description:cgm_purchase.field_purchase_order_line__qty_expected
+msgid "Expected quantity"
+msgstr "Quantité attendue"
+
+#. module: cgm_purchase
+#: model:ir.model.fields,help:cgm_purchase.field_purchase_order_line__virtual_available
+msgid ""
+"Forecast quantity (computed as Quantity On Hand - Outgoing + Incoming)\n"
+"In a context with a single Stock Location, this includes goods stored in this location, or any of its children.\n"
+"In a context with a single Warehouse, this includes goods stored in the Stock Location of this Warehouse, or any of its children.\n"
+"Otherwise, this includes goods stored in any Stock Location with 'internal' type."
+msgstr ""
+"Quantité actuelle d'articles en stock.\n"
+"Dans le contexte d'un seul emplacement de stock, ceci inclue les marchandises stockées dans cet emplacement et ses enfants.\n"
+"Dans le contexte d'un seul entrepôt, ceci inclue les marchandises stockées dans l'emplacement de l'entrepôt et ses enfants.\n"
+"Dans le contexte d'un magasin, ceci inclue les marchandises stockées dans l'entrepôt de ce magasin et ses enfants.\n"
+"Dans les autres contextes, ceci inclue les marchandises stockées dans n'importe quel emplacement de type 'interne'."
 
 #. module: cgm_purchase
 #: code:addons/cgm_purchase/models/purchase_order.py:0
@@ -46,6 +80,11 @@ msgstr "États de besoin"
 #: model_terms:ir.ui.view,arch_db:cgm_purchase.purchase_order_form_view_inherit
 msgid "Print Need State"
 msgstr "Imprimer état de besoin"
+
+#. module: cgm_purchase
+#: model:ir.model.fields,field_description:cgm_purchase.field_purchase_order_line__virtual_available
+msgid "Projected quantity"
+msgstr "Quantité projetée"
 
 #. module: cgm_purchase
 #: model:ir.model,name:cgm_purchase.model_purchase_order
