--- a/cgm-addons/cgm_purchase/i18n/fr.po
+++ b/cgm-addons/cgm_purchase/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-07-19 14:13+0000\n"
-"PO-Revision-Date: 2022-07-19 14:13+0000\n"
+"POT-Creation-Date: 2022-07-21 13:18+0000\n"
+"PO-Revision-Date: 2022-07-21 13:18+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -19,6 +19,18 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:cgm_purchase.purchase_order_form_view_inherit
 msgid "<span class=\"o_form_label\">Need State</span>"
 msgstr "<span class=\"o_form_label\">État de besoin</span>"
+
+#. module: cgm_purchase
+#: model_terms:ir.ui.view,arch_db:cgm_purchase.cgm_report_purchaseorder_document
+#: model_terms:ir.ui.view,arch_db:cgm_purchase.cgm_report_purchasequotation_document
+msgid "<strong>Name</strong>"
+msgstr "<strong>Nom</strong>"
+
+#. module: cgm_purchase
+#: model_terms:ir.ui.view,arch_db:cgm_purchase.cgm_report_purchaseorder_document
+#: model_terms:ir.ui.view,arch_db:cgm_purchase.cgm_report_purchasequotation_document
+msgid "<strong>SKU Code</strong>"
+msgstr "<strong>SKU Code</strong>"
 
 #. module: cgm_purchase
 #: model:ir.model.fields,field_description:cgm_purchase.field_purchase_order_line__qty_available
@@ -90,6 +102,11 @@ msgstr "Quantité projetée"
 #: model:ir.model,name:cgm_purchase.model_purchase_order
 msgid "Purchase Order"
 msgstr "Commande fournisseur"
+
+#. module: cgm_purchase
+#: model:ir.model,name:cgm_purchase.model_purchase_order_line
+msgid "Purchase Order Line"
+msgstr "Ligne de commande d'achat"
 
 #. module: cgm_purchase
 #: model:ir.model.fields.selection,name:cgm_purchase.selection__purchase_order__type__quotation
