--- a/cgm-addons/cgm_sale/i18n/fr.po
+++ b/cgm-addons/cgm_sale/i18n/fr.po
@@ -6,14 +6,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-07-25 15:33+0000\n"
-"PO-Revision-Date: 2022-07-25 15:33+0000\n"
+"POT-Creation-Date: 2022-07-26 12:00+0000\n"
+"PO-Revision-Date: 2022-07-26 12:00+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
+
+#. module: cgm_sale
+#: model:ir.actions.report,print_report_name:cgm_sale.action_report_stock_state
+msgid "'Stock State - %s' % (object.name)"
+msgstr "'État de stock - %s' % (object.name)"
 
 #. module: cgm_sale
 #: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
@@ -24,6 +29,11 @@ msgstr "Nom"
 #: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
 msgid "<span class=\"o_stat_text\">Quotations/SO</span>"
 msgstr "<span class=\"o_stat_text\">Devis/BC</span>"
+
+#. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.cgm_stock_state_document
+msgid "<span>Stock State</span>"
+msgstr "<span>État de stock</span>"
 
 #. module: cgm_sale
 #: model_terms:ir.ui.view,arch_db:cgm_sale.product_collection_form_view
@@ -119,6 +129,11 @@ msgid "Attachment Count"
 msgstr "Compte des pièces jointes"
 
 #. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.cgm_stock_state_document
+msgid "Barcode"
+msgstr "Code-barres"
+
+#. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_product_product__product_type_product
 #: model:ir.model.fields,field_description:cgm_sale.field_product_template__product_type_product
 msgid "CGM Product Type"
@@ -181,7 +196,12 @@ msgstr "Date début"
 #. module: cgm_sale
 #: model_terms:ir.ui.view,arch_db:cgm_sale.product_collection_form_view
 msgid "Dates"
-msgstr "Dates"
+msgstr ""
+
+#. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.cgm_stock_state_document
+msgid "Desired Quantity"
+msgstr "Qté désirée"
 
 #. module: cgm_sale
 #: model_terms:ir.ui.view,arch_db:cgm_sale.product_template_search_view_inherit
@@ -215,6 +235,7 @@ msgid "Draft"
 msgstr "Brouillon"
 
 #. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.cgm_stock_state_document
 #: model_terms:ir.ui.view,arch_db:cgm_sale.product_template_only_form_view_inherit
 #: model_terms:ir.ui.view,arch_db:cgm_sale.product_template_tree_view_inherit
 msgid "EAN Code"
@@ -835,6 +856,7 @@ msgstr ""
 "Planifiée : activités futures"
 
 #. module: cgm_sale
+#: model:ir.actions.report,name:cgm_sale.action_report_stock_state
 #: model:ir.model.fields.selection,name:cgm_sale.selection__sale_order_template__type__stock_state
 msgid "Stock State"
 msgstr "État de stock"
@@ -843,7 +865,7 @@ msgstr "État de stock"
 #: model:ir.actions.act_window,name:cgm_sale.stock_state_action
 #: model:ir.ui.menu,name:cgm_sale.stock_state_menu
 msgid "Stock States"
-msgstr "États de stock"
+msgstr "États des stocks"
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__type
