--- a/cgm-addons/cgm_sale/i18n/fr.po
+++ b/cgm-addons/cgm_sale/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-07-26 12:00+0000\n"
-"PO-Revision-Date: 2022-07-26 12:00+0000\n"
+"POT-Creation-Date: 2022-07-27 14:47+0000\n"
+"PO-Revision-Date: 2022-07-27 14:47+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -140,6 +140,12 @@ msgid "CGM Product Type"
 msgstr "CGM Type d’article"
 
 #. module: cgm_sale
+#: model:ir.model.fields.selection,name:cgm_sale.selection__sale_order_template__state__cancel
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
+msgid "Cancel"
+msgstr "Annuler"
+
+#. module: cgm_sale
 #: model:ir.actions.act_window,name:cgm_sale.product_collection_action
 msgid "Collections"
 msgstr "Collections"
@@ -231,6 +237,7 @@ msgstr "Terminé"
 
 #. module: cgm_sale
 #: model:ir.model.fields.selection,name:cgm_sale.selection__sale_order_template__state__draft
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
 msgid "Draft"
 msgstr "Brouillon"
 
@@ -286,9 +293,24 @@ msgid "Font awesome icon e.g. fa-tasks"
 msgstr "Icône Font Awesome e.g. fa-tasks"
 
 #. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
+msgid "Generate stock states"
+msgstr "Générer les états de stock"
+
+#. module: cgm_sale
+#: model:ir.model.fields.selection,name:cgm_sale.selection__sale_order_template__state__generated
+msgid "Generated"
+msgstr "Etat généré"
+
+#. module: cgm_sale
 #: model:ir.model.fields.selection,name:cgm_sale.selection__product_template__product_type_product__goods
 msgid "Goods"
 msgstr "Marchandises"
+
+#. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_search
+msgid "Group By"
+msgstr "Grouper par"
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_product_brand__has_message
@@ -451,6 +473,7 @@ msgstr "Dernière mise à jour le"
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__licence_id
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_search
 msgid "Licence"
 msgstr "Licence"
 
@@ -633,6 +656,11 @@ msgstr "Nombre de messages non lus"
 #: model_terms:ir.ui.view,arch_db:cgm_sale.product_category_search_view_inherit
 msgid "Parent Family"
 msgstr "Famille parente"
+
+#. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
+msgid "Print quotations"
+msgstr "Imprimer les états de stock"
 
 #. module: cgm_sale
 #: model:ir.model,name:cgm_sale.model_product_brand
@@ -821,6 +849,26 @@ msgid "Sale Order Template"
 msgstr "Modèle de devis"
 
 #. module: cgm_sale
+#: model:ir.model,name:cgm_sale.model_sale_order
+msgid "Sales Order"
+msgstr "Bon de commande"
+
+#. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_search
+msgid "Search Quotation Template"
+msgstr ""
+
+#. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
+msgid "Send quotations"
+msgstr "Envoyer les états de stock"
+
+#. module: cgm_sale
+#: model:ir.model.fields.selection,name:cgm_sale.selection__sale_order_template__state__sent
+msgid "Sent"
+msgstr "Envoyé"
+
+#. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_product_brand__sequence
 #: model:ir.model.fields,field_description:cgm_sale.field_product_collection__sequence
 #: model:ir.model.fields,field_description:cgm_sale.field_product_color__sequence
@@ -868,6 +916,22 @@ msgid "Stock States"
 msgstr "États de stock"
 
 #. module: cgm_sale
+#: code:addons/cgm_sale/models/sale_order_template.py:0
+#, python-format
+msgid "There is no customers"
+msgstr ""
+
+#. module: cgm_sale
+#: code:addons/cgm_sale/models/sale_order_template.py:0
+#: code:addons/cgm_sale/models/sale_order_template.py:0
+#: code:addons/cgm_sale/models/sale_order_template.py:0
+#: code:addons/cgm_sale/models/sale_order_template.py:0
+#: code:addons/cgm_sale/models/sale_order_template.py:0
+#, python-format
+msgid "There is nor Quotations/SO"
+msgstr "Il n'y a pas de Devis/SO à traiter"
+
+#. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__type
 msgid "Type"
 msgstr "Type"
@@ -904,6 +968,21 @@ msgstr "Messages non lus"
 #: model:ir.model.fields,field_description:cgm_sale.field_product_material__message_unread_counter
 msgid "Unread Messages Counter"
 msgstr "Compteur de messages non lus"
+
+#. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
+msgid "Validate"
+msgstr "Valider"
+
+#. module: cgm_sale
+#: model:ir.model.fields.selection,name:cgm_sale.selection__sale_order_template__state__verified
+msgid "Verified"
+msgstr "Stock vérifié"
+
+#. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
+msgid "Verify stock"
+msgstr "Vérifier le stock"
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_product_brand__website_message_ids
