--- a/cgm-addons/cgm_sale/i18n/fr.po
+++ b/cgm-addons/cgm_sale/i18n/fr.po
@@ -865,7 +865,7 @@ msgstr "État de stock"
 #: model:ir.actions.act_window,name:cgm_sale.stock_state_action
 #: model:ir.ui.menu,name:cgm_sale.stock_state_menu
 msgid "Stock States"
-msgstr "États des stocks"
+msgstr "États de stock"
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__type
