--- a/cgm-addons/cgm_sale/i18n/fr.po
+++ b/cgm-addons/cgm_sale/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-07-28 16:42+0000\n"
-"PO-Revision-Date: 2022-07-28 16:42+0000\n"
+"POT-Creation-Date: 2022-08-01 12:39+0000\n"
+"PO-Revision-Date: 2022-08-01 12:39+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -49,9 +49,8 @@ msgstr ""
 "                        <br/>\n"
 "                        N'hésitez pas à nous contacter si vous avez des questions.\n"
 "                        <br/>\n"
-"			  <br/>\n"
-"			  Cordialement,"
-"                    </p>\n"
+"\t\t\t  <br/>\n"
+"\t\t\t  Cordialement,                    </p>\n"
 "                </div>\n"
 "            "
 
@@ -771,11 +770,6 @@ msgid "Print Quotations"
 msgstr "Imprimer les états de stock"
 
 #. module: cgm_sale
-#: model:ir.model,name:cgm_sale.model_product_product
-msgid "Product"
-msgstr "Article"
-
-#. module: cgm_sale
 #: model:ir.model,name:cgm_sale.model_product_brand
 #: model:ir.model.fields,field_description:cgm_sale.field_product_product__brand_id
 #: model:ir.model.fields,field_description:cgm_sale.field_product_template__brand_id
@@ -950,7 +944,6 @@ msgstr ""
 "                    Code"
 
 #. module: cgm_sale
-#: model_terms:ir.ui.view,arch_db:cgm_sale.product_template_only_form_view_inherit
 #: model_terms:ir.ui.view,arch_db:cgm_sale.product_template_tree_view_inherit
 msgid "SKU Code"
 msgstr "SKU Code"
