--- a/cgm-addons/cgm_sale/i18n/fr.po
+++ b/cgm-addons/cgm_sale/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-01 12:39+0000\n"
-"PO-Revision-Date: 2022-08-01 12:39+0000\n"
+"POT-Creation-Date: 2022-08-01 16:10+0000\n"
+"PO-Revision-Date: 2022-08-01 16:10+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -66,8 +66,8 @@ msgstr "<span class=\"o_stat_text\">Devis/BC</span>"
 
 #. module: cgm_sale
 #: model_terms:ir.ui.view,arch_db:cgm_sale.cgm_stock_state_document
-msgid "<span>Stock State</span>"
-msgstr "<span>État de stock</span>"
+msgid "<span>Stock State #</span>"
+msgstr "<span>État de stock #</span>"
 
 #. module: cgm_sale
 #: model_terms:ir.ui.view,arch_db:cgm_sale.product_collection_form_view
