--- a/cgm-addons/cgm_purchase/i18n/fr.po
+++ b/cgm-addons/cgm_purchase/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-01 12:51+0000\n"
-"PO-Revision-Date: 2022-08-01 12:51+0000\n"
+"POT-Creation-Date: 2022-08-04 16:41+0000\n"
+"PO-Revision-Date: 2022-08-04 16:41+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -196,6 +196,11 @@ msgid "Description"
 msgstr "Description"
 
 #. module: cgm_purchase
+#: model:ir.model.fields,field_description:cgm_purchase.field_need_mgmt_process__device_ids
+msgid "Devices"
+msgstr "Devices"
+
+#. module: cgm_purchase
 #: model:ir.model.fields,field_description:cgm_purchase.field_need_mgmt_process__display_name
 #: model:ir.model.fields,field_description:cgm_purchase.field_need_mgmt_process_line__display_name
 msgid "Display Name"
@@ -231,6 +236,11 @@ msgstr "Quantité attendue"
 #: model_terms:ir.ui.view,arch_db:cgm_purchase.report_need_mgmt_process_document
 msgid "Factory"
 msgstr "Fournisseur"
+
+#. module: cgm_purchase
+#: model:ir.model.fields,field_description:cgm_purchase.field_need_mgmt_process__category_ids
+msgid "Families"
+msgstr "Familles"
 
 #. module: cgm_purchase
 #: model:ir.model.fields,field_description:cgm_purchase.field_need_mgmt_process__message_follower_ids
@@ -553,6 +563,18 @@ msgstr "Responsable"
 #: model:ir.model.fields,field_description:cgm_purchase.field_need_mgmt_process__activity_user_id
 msgid "Responsible User"
 msgstr "Utilisateur Responsable"
+
+#. module: cgm_purchase
+#: model_terms:ir.ui.view,arch_db:cgm_purchase.report_purchase_order_document_inherit
+#: model_terms:ir.ui.view,arch_db:cgm_purchase.report_purchase_quotation_document_inherit
+msgid ""
+"SKU\n"
+"                <br/>\n"
+"                Code"
+msgstr ""
+"SKU\n"
+"                <br/>\n"
+"                Code"
 
 #. module: cgm_purchase
 #: model_terms:ir.ui.view,arch_db:cgm_purchase.need_mgmt_process_form_view
