--- a/cgm-addons/cgm_sale/i18n/fr.po
+++ b/cgm-addons/cgm_sale/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-04 16:51+0000\n"
-"PO-Revision-Date: 2022-08-04 16:51+0000\n"
+"POT-Creation-Date: 2022-08-05 20:42+0000\n"
+"PO-Revision-Date: 2022-08-05 20:42+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -1062,6 +1062,16 @@ msgstr "État de stock : Envoyer par mail"
 #: model:ir.ui.menu,name:cgm_sale.stock_state_menu
 msgid "Stock States"
 msgstr "États de stock"
+
+#. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
+msgid "Stocks Validity"
+msgstr "Validité des stocks"
+
+#. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
+msgid "The period of validity of the stocks"
+msgstr "Période de validité des stocks"
 
 #. module: cgm_sale
 #: code:addons/cgm_sale/models/sale_order_template.py:0
