--- a/cgm-addons/cgm_sale/i18n/fr.po
+++ b/cgm-addons/cgm_sale/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-05 20:42+0000\n"
-"PO-Revision-Date: 2022-08-05 20:42+0000\n"
+"POT-Creation-Date: 2022-08-09 12:34+0000\n"
+"PO-Revision-Date: 2022-08-09 12:34+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -923,6 +923,11 @@ msgid "Quotation Template"
 msgstr "Modèle de devis"
 
 #. module: cgm_sale
+#: model:ir.model,name:cgm_sale.model_sale_order_template_line
+msgid "Quotation Template Line"
+msgstr "Ligne Modèle de devis"
+
+#. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__sale_order_ids
 msgid "Quotations / Orders"
 msgstr "Devis / Bons de commande"
@@ -1024,6 +1029,7 @@ msgstr "Séquence"
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template__state
+#: model:ir.model.fields,field_description:cgm_sale.field_sale_order_template_line__state
 msgid "State"
 msgstr "Statut"
 
@@ -1075,6 +1081,12 @@ msgstr "Période de validité des stocks"
 
 #. module: cgm_sale
 #: code:addons/cgm_sale/models/sale_order_template.py:0
+#, python-format
+msgid "There is no line to generate the corresponding stock offers."
+msgstr "Il n'y a aucune ligne pour générer les offres du stock correspondantes !"
+
+#. module: cgm_sale
+#: code:addons/cgm_sale/models/sale_order_template.py:0
 #: code:addons/cgm_sale/models/sale_order_template.py:0
 #: code:addons/cgm_sale/models/sale_order_template.py:0
 #, python-format
@@ -1114,6 +1126,11 @@ msgstr "Type d'activité d'exception enregistrée"
 #: model:ir.model.fields,field_description:cgm_sale.field_product_template__upc_code
 msgid "UPC Code"
 msgstr "UPC Code"
+
+#. module: cgm_sale
+#: model_terms:ir.ui.view,arch_db:cgm_sale.sale_order_template_view_form_inherit
+msgid "Unlink Lines With Qte <= 0"
+msgstr "Supprimer lignes Qté <= 0"
 
 #. module: cgm_sale
 #: model:ir.model.fields,field_description:cgm_sale.field_product_brand__message_unread
